Minor code improvement.